--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@ $(".submit").on("click", function (){
 
 	event.preventDefault();
 
+	console.log(BaseUrl);
+
+	console.log(api_key);
+
 	console.log("BLAHHAHAH");
 
 	boxAPI(BaseUrl, "fdf45ekhg6vamm0nbo8ul9njzdkfe3p2", function(response){
